Updated TE model for revision

--- a/examples/01_beginner/03_spirals.html
+++ b/examples/01_beginner/03_spirals.html
@@ -23,7 +23,7 @@ function cacatoo()
 
     let config = {
             title: "Spirals",
-            description: "8 colours with cyclical dominance <br> (stare at your own risk)",
+            description: "8 colours with cyclical dominance (stare at your own risk)",
             maxtime: 10000,
             fastmode: true,
             ncol : 200,
