--- a/examples/02_advanced/08_ode_serial_transfer.html
+++ b/examples/02_advanced/08_ode_serial_transfer.html
@@ -33,7 +33,7 @@ function cacatoo()
             nrow : 120,		            // dimensions of the grid to build
             wrap : [true, true],       // Wrap boundary [COLS, ROWS]   
             scale : 3,				    // scale of the grid (nxn pixels per grid cell)
-            statecolours: {'alive':{1:'#00FFFF'}},   // The background state '0' is never drawn
+            statecolours: {'alive':{1:'purple'}},   // The background state '0' is never drawn
             skipbg_state: true,                      // Don't draw 0-state on grid (faster)
             graph_interval: 1,
             graph_update: 5,
