--- a/examples/01_beginner/02_prime.html
+++ b/examples/01_beginner/02_prime.html
@@ -40,7 +40,7 @@ function cacatoo()
     sim = new Simulation(config)             // Initialise a new sim instance with configuration given above
     
     sim.makeGridmodel("prime");         
-    sim.createDisplay("prime","alive")
+    sim.createDisplay("prime","alive","Modulo prime")
     
     // Note to user: initialPattern is disabled, as it requirs a webserver for security reasons. Use the pattern button instead. 
     // sim.initialPattern(sim.prime, 'alive', '../patterns/elephant_cacatoo.png', 115, 115)
