--- a/examples/03_expert/10_classes_PoS.html
+++ b/examples/03_expert/10_classes_PoS.html
@@ -58,7 +58,7 @@ function cacatoo()
 
     sim.makeGridmodel("cells");
     sim.cells.colourViridis("genomesize", 100)
-    sim.createDisplay("cells","genomesize")    
+    sim.createDisplay("cells","genomesize","Genome size of individuals")    
 
     sim.cells.initialise = function()
     {
