--- a/examples/01_beginner/03_spirals.html
+++ b/examples/01_beginner/03_spirals.html
@@ -36,7 +36,7 @@ function cacatoo()
     sim = new Simulation(config)
 
     sim.makeGridmodel("spirals"); 
-    sim.createDisplay("spirals","colour")
+    sim.createDisplay("spirals","colour","Colours represent different species")
     let n_species = 8
     
     
