--- a/examples/01_beginner/04_interacting_grids.html
+++ b/examples/01_beginner/04_interacting_grids.html
@@ -39,12 +39,12 @@ function cacatoo()
 
     sim.makeGridmodel("gol");    
     sim.initialGrid(sim.gol,'alive',1,0.1)        
-    sim.createDisplay("gol","alive")
+    sim.createDisplay("gol","alive","Game of life (solo)")
 
     sim.makeGridmodel("vote");
     sim.initialGrid(sim.vote,'left',1,0.5)        // Give each grid-point object a new property names 'val', with 50% 1, otherwise 0
     sim.initialGrid(sim.vote,'overlay',0,1.0)        // Give each grid-point object a new property names 'val', with 50% 1, otherwise 0
-    sim.createDisplay("vote","overlay")
+    sim.createDisplay("vote","overlay","Vote / Game of life interact")
 
     sim.gol.nextState = function(i,j)                 // Define the next-state function. This example is game of life + vote
     {   
