Updated TE model for revision

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,9 +16,10 @@
     </div>
     <div class="content" id="canvas_holder">
         <h2>Beginner:</h2>
+        <a href="empty_project.html"><div class="example_card" >0. Empty project<div class="example_card_img" style="background-color:black">  </div></div></a>
         <a href="01_beginner/01_gol.html"><div class="example_card" >1. Game of Life<div class="example_card_img" style="background-image:url('images/gol.gif')">  </div></div></a>
         <a href="01_beginner/02_prime.html"><div class="example_card" >2. Modulo prime<div class="example_card_img" style="background-image:url('images/prime.gif')">  </div></div></a>
-        <a href="01_beginner/03_spirals.html"><div class="example_card" >3. Spirals<div class="example_card_img" style="background-image:url('images/spirals.gif')">  </div></div></a>
+        <a href="01_beginner/03_spirals.html"><div class="example_card" >3. Spirals<div class="example_card_img" style="background-image:url('images/spirals.gif')">  </div></div></a><br>
         <a href="01_beginner/04_interacting_grids.html"><div class="example_card" >4. Interacting grids<div class="example_card_img" style="background-image:url('images/interact.gif')">  </div></div></a>
         <a href="01_beginner/05_ode_lotka.html"><div class="example_card" >5. ODEs (Lotka Volterra)<div class="example_card_img" style="background-image:url('images/lotka.gif')">  </div></div></a>
         <a href="01_beginner/06_ode_turing.html"><div class="example_card" >6. ODEs (Turing Patterns)<div class="example_card_img" style="background-image:url('images/turing.gif')">  </div></div></a>        
