--- a/examples/01_beginner/01_gol.html
+++ b/examples/01_beginner/01_gol.html
@@ -13,95 +13,94 @@
 <!--  ---------------Do not change the part below ------------------  -->
 
 <html>
-    <script src="../../dist/cacatoo.js"></script>                 <!-- Include cacatoo library (compiled with rollup) -->
-    <script src="../../lib/all.js"></script>                      <!-- Include other libraries (concattenated in 1 file) -->
-    <link rel="stylesheet" href="../../style/cacatoo.css">        <!-- Set style sheet -->
+<script src="../../dist/cacatoo.js"></script> <!-- Include cacatoo library (compiled with rollup) -->
+<script src="../../lib/all.js"></script> <!-- Include other libraries (concattenated in 1 file) -->
+<link rel="stylesheet" href="../../style/cacatoo.css"> <!-- Set style sheet -->
 <script>
 
-/*-----------------------Start user-defined code ---------------------*/
+    /*-----------------------Start user-defined code ---------------------*/
 
-let sim; // Declare a variable named "sim" globally, so that we can access our cacatoo-simulation from wherever we need. 
+    let sim; // Declare a variable named "sim" globally, so that we can access our cacatoo-simulation from wherever we need. 
 
-/**
-* function cacatoo() contains all the user-defined parts of a cacatoo-model. Configuration, update rules, what is displayed or plotted, etc. It's all here.
-*/
-function cacatoo()
-{
-    /*
-        1. SETUP. First, set up a configuration-object. Here we define how large the grid is, how long will it run, what colours will the critters be, etc. 
+    /**
+    * function cacatoo() contains all the user-defined parts of a cacatoo-model. Configuration, update rules, what is displayed or plotted, etc. It's all here.
     */
-    let config = {                                        
+    function cacatoo() {
+        /*
+            1. SETUP. First, set up a configuration-object. Here we define how large the grid is, how long will it run, what colours will the critters be, etc. 
+        */
+        let config = {
             title: "Game of Life",                        // The name of your cacatoo-simulation
             description: "Conway's Game of Life",         // And a description if you wish
             maxtime: 1000000,                             // How many time steps the model continues to run
             fastmode: true,                               // If possible, fast-mode will update the model more than once before displaying the grid
-                                                          // (note, the onscreen FPS may drop below 60 fps when using fast mode, although many more timesteps may be handled per second)
-            ncol : 400,                                   // Number of columns (width of your grid)
-            nrow : 170,		                              // Number of rows (height of your grid)
-            wrap : [true, true],                          // Wrapped boundary conditions? [COLS, ROWS]   
-            scale : 2,				                      // Scale of the grid (nxn pixels per grid point)
-            statecolours: {'alive':{1:'white'}},          // Colours for each state. Background (0) defaults to black. 
+            // (note, the onscreen FPS may drop below 60 fps when using fast mode, although many more timesteps may be handled per second)
+            ncol: 400,                                   // Number of columns (width of your grid)
+            nrow: 170,		                              // Number of rows (height of your grid)
+            wrap: [true, true],                          // Wrapped boundary conditions? [COLS, ROWS]   
+            scale: 2,				                      // Scale of the grid (nxn pixels per grid point)
+            statecolours: { 'alive': { 1: 'white' } },          // Colours for each state. Background (0) defaults to black. 
+        }
+
+        /*
+            1. SETUP. (continued) Now, let's use that configuration-object to generate a new Cacatoo simulation
+        */
+        sim = new Simulation(config)                          // Initialise the Cacatoo simulation
+        sim.makeGridmodel("gol")                              // Build a new Gridmodel within the simulation called "gol" (Game Of Life)
+        sim.initialGrid(sim.gol, 'alive', 1, 0.5)                // Set half (50%) of the Gridmodel's grid points to 1 (alive)
+        sim.createDisplay("gol", "alive", "Game of life (white=alive)")                      // Create a display so we can see our newly made gridmodel
+
+        /*
+            2. DEFINING THE RULES. Below, the user defines the nextState function. This function will be applied for each grid point when we will update the grid later. 
+        */
+        sim.gol.nextState = function (i, j) {
+            // This example uses the rules of game of life, which has the following three rules:
+            // i) A living cell surrounded by two or three living cells, stays alive. 
+            // ii) A living cell surrounded by any other number of cells, dies.
+            // iii) A dead cell surrounded by exactly three living cells, becomes alive. 
+
+            // So, first we need to know how many cells are alive around a grid point
+            let neighbours = sim.gol.countMoore8(this, i, j,'alive',1)              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
+            // Then, let's see if this cell is dead or alive
+            let state = this.grid[i][j].alive;
+            // Then, apply the rules of game of life shown above
+            if (state == 0 && neighbours == 3)
+                this.grid[i][j].alive = 1;
+            else if (state == 1 && (neighbours < 2 || neighbours > 3))
+                this.grid[i][j].alive = 0;
+            else
+                this.grid[i][j].alive = state;
+        }
+
+        /*
+            3. MAIN SIMULATION LOOP. Finally, we need to set the update-function, which is the mainwill be applied to the whole grid each time step. For now, all we will do is call "synchronous", which
+            applies the next-state function shown above to each grid point. All cells are updated at the same time, rather than in turn (for this, use the function "asynchonous")
+        */
+        sim.gol.update = function () {
+            this.synchronous()         // Applied as many times as it can in 1/60th of a second
+        }
+
+        /*
+            OPTIONAL: Now that we have everything setup, we can also add some interactive elements (buttons or sliders). See cheater.html for more examples of this. 
+        */
+        sim.addPatternButton(sim.gol, 'alive')
+        sim.addButton("pause/continue", function () { sim.toggle_play() })
+        sim.addButton("step", function () { sim.step(); sim.display() })
+        sim.start()
+
     }
 
-    /*
-        1. SETUP. (continued) Now, let's use that configuration-object to generate a new Cacatoo simulation
-    */
-    sim = new Simulation(config)                          // Initialise the Cacatoo simulation
-    sim.makeGridmodel("gol")                              // Build a new Gridmodel within the simulation called "gol" (Game Of Life)
-    sim.initialGrid(sim.gol,'alive',1,0.5)                // Set half (50%) of the Gridmodel's grid points to 1 (alive)
-    sim.createDisplay("gol","alive","Game of life (white=alive)")                      // Create a display so we can see our newly made gridmodel
-    
-    /*
-        2. DEFINING THE RULES. Below, the user defines the nextState function. This function will be applied for each grid point when we will update the grid later. 
-    */
-    sim.gol.nextState = function(i,j)                   
-    {   
-        // This example uses the rules of game of life, which has the following three rules:
-        // i) A living cell surrounded by two or three living cells, stays alive. 
-        // ii) A living cell surrounded by any other number of cells, dies.
-        // iii) A dead cell surrounded by exactly three living cells, becomes alive. 
 
-        // So, first we need to know how many cells are alive around a grid point
-        let neighbours = sim.gol.countMoore8(this,i,j,1,'alive')              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
-        // Then, let's see if this cell is dead or alive
-        let state = this.grid[i][j].alive;            
-        // Then, apply the rules of game of life shown above
-        if(state == 0 && neighbours == 3)
-            this.grid[i][j].alive = 1;
-        else if(state == 1 && (neighbours < 2 || neighbours > 3))
-            this.grid[i][j].alive = 0;
-        else
-            this.grid[i][j].alive = state;
-    }
-    
-    /*
-        3. MAIN SIMULATION LOOP. Finally, we need to set the update-function, which is the mainwill be applied to the whole grid each time step. For now, all we will do is call "synchronous", which
-        applies the next-state function shown above to each grid point. All cells are updated at the same time, rather than in turn (for this, use the function "asynchonous")
-    */
-    sim.gol.update = function()
-    {                                
-        this.synchronous()         // Applied as many times as it can in 1/60th of a second
-    }
-
-    /*
-        OPTIONAL: Now that we have everything setup, we can also add some interactive elements (buttons or sliders). See cheater.html for more examples of this. 
-    */
-    sim.addPatternButton(sim.gol,'alive')
-    sim.addButton("pause/continue",function() { sim.toggle_play()})
-    sim.addButton("step",function() { sim.step(); sim.display()})
-    sim.start()
-
-}
-
-
-/*-------------------------End user-defined code ---------------------*/
+    /*-------------------------End user-defined code ---------------------*/
 
 </script>
 
 
 
-<body onload="cacatoo()">        
-    <div class="header" id="header"><h2>Cacatoo </h2></div>
+<body onload="cacatoo()">
+    <div class="header" id="header">
+        <h2>Cacatoo </h2>
+    </div>
     <div class="content" id="canvas_holder"></div>
     <div class="content" id="form_holder"></div>
     <div class="content" id="graph_holder"> </div>
