--- a/examples/04_even_more_examples/cooperation.html
+++ b/examples/04_even_more_examples/cooperation.html
@@ -32,7 +32,9 @@ function cacatoo() {
     */
     let config = {                                                      // Configuration of your model. How large is the grid, how long will it run, what colours will the critters be, etc. 
         title: "Cooperating with your neighbours",
-        description: "",
+        description: "Studying evolution in the lab is super cool, but can cost a lot of time and money.<br>"+
+                     "Another way to investigate biological systems is to build simple 'simulations' based on biological rules, and study the outcome.<br>"+
+                     "In this particular simulation, we can study cooperation. Why do individuals cooperate?",
         maxtime: 1000000,
         ncol: 300,
         nrow: 100,		                                            // dimensions of the grid to build
@@ -174,7 +176,7 @@ function cacatoo() {
         <h2>Cacatoo </h2>
     </div>
     <div class="content">
-        <br><b>How this simulation works:</b><br>
+        <br><b>How the simulation works:</b><br>
         <br><img src="../../images/coop.png" width=900>
         <br><br><b>Try and answer the following questions by running the simulation below:</b>
         <center><div style="width:600"><ul>
