--- a/examples/01_beginner/05_ode_lotka.html
+++ b/examples/01_beginner/05_ode_lotka.html
@@ -37,8 +37,10 @@
         sim.lotka.colourGradient('numpred', 200, [0, 0, 0], [240, 200, 0])                         // Will contain the ODEs, and show the abundance of PREDATORS
         sim.lotka.colourGradient('numprey', 200, [0, 0, 0], [148, 0, 211])                         // Will contain the ODEs, and show the abundance of PREDATORS
 
-        sim.createDisplay('lotka', 'numpred', "Local predator density")
-        sim.createDisplay('lotka', 'numprey', "Local prey density")
+        sim.createDisplay_continuous({model:"lotka", property:"numpred", label:"Local predator density", // Createa a display for a continuous variable (ODE state for external resources)
+                            minval:0, maxval:200})        
+        sim.createDisplay_continuous({model:"lotka", property:"numprey", label:"Local prey density", // Createa a display for a continuous variable (ODE state for external resources)
+                            minval:0, maxval:200}) 
 
         // Define a basic Lotka Volterra ODE system
         // dx/dt = a x - b x y
