Resolved some minor issues with neighbourhoods on unwrapped grids

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,24 +16,25 @@
         <h2>Cacatoo examples</h2>
     </div>
     <div class="content" id="canvas_holder">
-        <h1>Beginner</h1>
-        <a href="01_beginner/01_gol.html"><div class="example_card" >1. Game of Life<div class="example_card_img" style="background-image:url('images/gol.gif')">  </div></div></a>
-        <a href="01_beginner/02_prime.html"><div class="example_card" >2. Modulo prime<div class="example_card_img" style="background-image:url('images/prime.gif')">  </div></div></a>
-        <a href="01_beginner/03_spirals.html"><div class="example_card" >3. Spirals<div class="example_card_img" style="background-image:url('images/spirals.gif')">  </div></div></a>
-        <a href="01_beginner/04_interacting_grids.html"><div class="example_card" >4. Interacting grids<div class="example_card_img" style="background-image:url('images/interact.gif')">  </div></div></a>
-        <a href="01_beginner/05_ode_lotka.html"><div class="example_card" >5. ODEs (Lotka Volterra)<div class="example_card_img" style="background-image:url('images/lotka.gif')">  </div></div></a>
-        <a href="01_beginner/06_ode_turing.html"><div class="example_card" >6. ODEs (Turing Patterns)<div class="example_card_img" style="background-image:url('images/turing.gif')">  </div></div></a>        
+        <h1>Beginner - The classics</h1>
+        <a href="01_beginner/gol.html"><div class="example_card" >1. Game of Life<div class="example_card_img" style="background-image:url('images/gol.gif')">  </div></div></a>
+        <a href="01_beginner/prime.html"><div class="example_card" >2. Modulo prime<div class="example_card_img" style="background-image:url('images/prime.gif')">  </div></div></a>
+        <a href="01_beginner/spirals.html"><div class="example_card" >3. Spirals<div class="example_card_img" style="background-image:url('images/spirals.gif')">  </div></div></a>
+        <a href="01_beginner/interacting_grids.html"><div class="example_card" >4. Interacting grids (Vote + GoL)<div class="example_card_img" style="background-image:url('images/interact.gif')">  </div></div></a>
+        <a href="01_beginner/ode_lotka.html"><div class="example_card" >5. Lotka Volterra (ODEs)<div class="example_card_img" style="background-image:url('images/lotka.gif')">  </div></div></a>
+        <a href="01_beginner/ode_turing.html"><div class="example_card" >6. Turing Patterns (ODEs)<div class="example_card_img" style="background-image:url('images/turing.gif')">  </div></div></a>        
             <hr>
 
-            <h1>Advanced</h1>
-            <a href="02_advanced/07_cheater.html"><div class="example_card" >7. Mutualists and cheater<div class="example_card_img" style="background-image:url('images/cheater.gif')">  </div></div></a>
-            <a href="02_advanced/08_ode_serial_transfer.html"><div class="example_card" >8. Serial transfer<div class="example_card_img" style="background-image:url('images/serial.gif')">  </div></div></a>
-            <a href="02_advanced/09_petridish.html"><div class="example_card" >9. Petridish<div class="example_card_img" style="background-image:url('images/petridish.gif')">  </div></div></a>
+            <h1>Advanced - Exploring biology</h1>
+            <a href="02_advanced/diffusion_limited_aggregation.html"><div class="example_card" >7. Diffusion-limited aggregation<div class="example_card_img" style="background-image:url('images/dla.gif')">  </div></div></a>
+            <a href="02_advanced/cheater.html"><div class="example_card" >8. Mutualists and cheater<div class="example_card_img" style="background-image:url('images/cheater.gif')">  </div></div></a>
+            <a href="02_advanced/ode_serial_transfer.html"><div class="example_card" >9. Serial transfer (ODEs)<div class="example_card_img" style="background-image:url('images/serial.gif')">  </div></div></a>
+            <a href="02_advanced/petridish.html"><div class="example_card" >10. Petridish<div class="example_card_img" style="background-image:url('images/petridish.gif')">  </div></div></a>
                 <hr>
 
-            <h1>Expert</h1>
-                <a href="03_expert/10_classes_PoS.html"><div class="example_card" >10. Using classes <br><font size=1>(genomes like pearls on a string)</font><div class="example_card_img" style="background-image:url('images/pos.gif')">  </div></div></a>
-                <a href="03_expert/11_classes_PoS_TEs.html"><div class="example_card" >11. Jumping transposons <br><font size=1>(coexisting with their host)</font><div class="example_card_img" style="background-image:url('images/tes.gif')">  </div></div></a>
+            <h1>Expert - Towards multiscale ecology and evolution</h1>
+                <a href="03_expert/classes_PoS.html"><div class="example_card" >10. Using classes <div class="example_card_img" style="background-image:url('images/pos.gif')">  </div></div></a>
+                <a href="03_expert/classes_PoS_TEs.html"><div class="example_card" >11. Jumping transposons <div class="example_card_img" style="background-image:url('images/tes.gif')">  </div></div></a>
                 
     </div>
 
