Updated the docs

--- a/examples/02_advanced/diffusion_limited_aggregation.html
+++ b/examples/02_advanced/diffusion_limited_aggregation.html
@@ -37,7 +37,7 @@
                 wrap : [false, false],                         // Wrapped boundary conditions? [COLS, ROWS]   
                 scale : 2,				                      // Scale of the grid (nxn pixels per grid point)
                 statecolours: {'state':{1:'white'},
-                                'colour':'default'},          // Colours for each state. Background (0) defaults to black. 
+                                'colour':'inferno'},          // Colours for each state. Background (0) defaults to black. 
         }
     
         /*
