--- a/test/cacatoo.js.html
+++ b/test/cacatoo.js.html
@@ -185,7 +185,7 @@ class ODE
      *  @param {float} delta_t Step size
      *  @param {bool} opt_pos When enabled, negative values are set to 0 automatically
     */ 
-    solve_timestep(delta_t=0.1,pos=false)
+    solveTimestep(delta_t=0.1,pos=false)
     {
         let newstate = this.solver.solve(
                      this.eq(...this.pars),      // function to solve and its pars (... unlists the array as a list of args)
@@ -1180,7 +1180,7 @@ class Gridmodel
             {
                 for(let ode of this.grid[i][j].ODEs)
                 {                    
-                    ode.solve_timestep(delta_t,opt_pos);
+                    ode.solveTimestep(delta_t,opt_pos);
                 }
             }
         }
