--- a/examples/01_beginner/ode_turing.html
+++ b/examples/01_beginner/ode_turing.html
@@ -74,7 +74,7 @@
         sim.turing.nextState = function (i, j)       // Define the next-state function. 
         {
             // 1) ODE integration
-            this.grid[i][j].turingeq.solve_timestep(1.0, opt_pos = true)
+            this.grid[i][j].turingeq.solveTimestep(1.0, opt_pos = true)
 
             // 3) Update how this GP is displayed
             let act = Math.max(0.001, this.grid[i][j].turingeq.state[0])       // Amount of prey (continuous variable)
