--- a/examples/01_beginner/gol.html
+++ b/examples/01_beginner/gol.html
@@ -33,7 +33,7 @@
             title: "Game of Life",                       // The name of your cacatoo-simulation
             description: "Conway's Game of Life",        // And a description if you wish
             maxtime: 1000000,                            // How many time steps the model continues to run
-            fastmode: true,                              // If possible, fast-mode will update the model more than once before displaying the grid
+            fastmode: false,                              // If possible, fast-mode will update the model more than once before displaying the grid
                                                          // (note, the onscreen FPS may drop below 60 fps when using fast mode, although many more timesteps may be handled per second)
             ncol: 400,                                   // Number of columns (width of your grid)
             nrow: 170,		                             // Number of rows (height of your grid)
@@ -93,6 +93,7 @@
         sim.addButton("pause/continue", function () { sim.toggle_play() })
         sim.addButton("step", function () { sim.step(); sim.display() })
         sim.modifysleep = function(newvalue) { this.sleep = newvalue}
+        sim.addCustomSlider(function (new_value) { sim.sleep = new_value },0,1000,1,0,"Sleeping time (ms)") // addCustomSlider(function, minimal, maximal, step-size, default, label)
         sim.start()
 
     }
